# omnixys-inventory-service

./: .gitignore  .health.env  404.html  Dockerfile  README.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci-cd.yml  codeql.yml  daily-dependency-check.yml  dependecy-check.yml  release.yml  security.yml  update-docker-image.yml
er-diagramm/: index.html
exports/: 2025-05-15.csv  2025-05-22.csv
extras/csv/: inventory.csv  reserved_item.csv
komponentendiagramm/: index.html
modules/__init__/: index.html
modules/entity/: index.html
modules/graphql/: index.html
modules/repository/: index.html
modules/rest/: index.html
modules/security/: index.html
modules/service/: index.html
schichtenarchitektur/: index.html
src/inventory/: __init__.py  __main__.py  asgi_server.py  banner.py  dependency_provider.py  fastapi_app.py
src/inventory/client/: product_client.py
src/inventory/client/product/: product_client.py  product_service.py
src/inventory/config/: __init__.py  config.py  db.py  dev_modus.py  env.py  excel.py  feature_flags.py  graphql.py  kafka.py  logger.py  otel_setup.py  server.py  tls.py
src/inventory/config/dev/: db_populate.py  db_populate_router.py
src/inventory/config/resources/: inventory.toml
src/inventory/config/resources/mysql/: create.sql  drop.sql
src/inventory/error/: authentication_error.py  authorization_error.py  exceptions.py
src/inventory/graphql/: __init__.py  mutation.py  query.py  schema.py
src/inventory/graphql_api/: __init__.py  graphql_types.py  mutation.py  query.py  schema.py
src/inventory/health/: health_env.py  router.py  service.py
src/inventory/messagers/: kafka_consumer.py
src/inventory/messaging/: kafka_consumer_service.py  kafka_event_dispatcher.py  kafka_producer_service.py  kafka_singleton.py  kafka_topic_properties.py
src/inventory/messaging/handler/: release_item_handler.py  reserve_item_handler.py
src/inventory/model/entity/: __init__.py  base.py  inventory.py  reserved_item.py
src/inventory/model/enum/: __init__.py  inventory_status_type.py
src/inventory/model/input/: pagination.py  patient_dto.py  search_criteria_input.py
src/inventory/model/mapper/: inventory_mapper.py
src/inventory/model/payload/: create_payload.py
src/inventory/model/types/: inventory_slice.py
src/inventory/repository/: __init__.py  inventory_repository.py  inventory_repository2.py  pageable.py  reserved_item_repository.py  session.py  slice.py
src/inventory/resolver/: __init__.py  inventory_mutation_resolver.py  inventory_query_resolver.py  reserved_item_query_resolver.py
src/inventory/router/: __init__.py  health_router.py
src/inventory/security/: keycloak_service.py
src/inventory/service/: __init__.py  inventory_read_service.py  inventory_write_service.py  product_service.py  reserved_item_read_service.py
src/inventory/tracing/: decorators.py  log_event_dto.py  logger_plus.py  trace_context_middleware.py  trace_context_util.py
use-cases/: index.html
